[Changes 1.2c01]

* Fix /detach and wserv with IPv6 enabled. (caf, snadge, packet)

* Make default for NICK_COMPLETION_CHAR explicit. (caf)

* Reduce footprint when starting up disconnected. (caf)

* Fix /nslookup command (including fixing compilation on cygwin). (caf)

* Improve /detach error handling and remove bogus F_SETOWN use, reported
  by madsage. (caf)

* Add /FSET WHOIS_SECURE for SSL connection info on ratbox, unreal and 
  freenode. (caf)

* Add /FSET CHANNEL_URL for services channel URL numeric. (caf)

* Fix crash bug in $mircansi() scripting function. (caf)

* Add half-op support to /topic and /untopic. (caf)

* Tidy up the URL grabber, fixing a memory leak. (caf)

* Cleanup the /BHELP code, fixing a potential crash. Apply updates to 
  BitchX.help from t3gah. (caf)

* [1.1s01] Sanity check color codes, fixes a potential crash. (caf)

* Add /FSET USERMODE_OTHER to correctly format user mode changes where the
  source isn't the same as the target, reported by gauze. (caf)

* Improve country() and add several new TLDs, suggested by gauze. (caf)

* Apply fixes from darkfires removing non-standard use of arithmetic on
  void * values, to allow building on Irix. (caf)

* Apply fix from darkfires to allow building with ICC. (caf)

* Show correct message when a socket connection is closed cleanly. (caf)

* Add /FSET WHOIS_CALLERID for +g mode notification on hybrid & ratbox. (caf)

* Build script fix to allow plugins to build on x86-64. (caf)

* Correct count in /CLONES (reported by t3gah), and format output nicely
  using an /fset. (caf)

* Add definition of BIND_8_COMPAT to fix build problem on Mac OS X. (caf)

* Ensure that SHOW_AWAY_ONCE doesn't hide away status in /whois output. (caf)

* Fix the the -z command line option for specifying username. (flashback)

* Fix up /WILN, /WILC and /WILCR. (caf)

* Backport changes from epic5 to make recv_nick, sent_nick and sent_body 
  per-server, and apply new version of do_oops from flashback. This means