@@ -912,7 +912,7 @@ if test -n "$CYGWIN" -o -n "$EMXOS2" -o -n "$MINGWIN32"; then
   INSTALL_WSERV="\$(IRCLIB)/wserv\$(EXEEXT)"
   INSTALL_SCRBX="\$(IRCLIB)/scr-bx\$(EXEEXT)"
   INSTALL_SCRIPT="\$(IRCLIB)/script"
-  INSTALL_HELP_CMD="cp -pfr bitchx-docs/* \$(HELPDIR)"
+  INSTALL_HELP_CMD="cp -pfr bitchx-docs/* \$(DESTDIR)\$(HELPDIR)"
   PLUGINDIR="\$(IRCLIB)/plugins"
   DEFAULT_CTOOLZ_DIR="/PROGRA~1/BitchX"
   DEFAULT_MSGLOGFILE="BitchX.awy"
@@ -921,7 +921,7 @@ if test -n "$CYGWIN" -o -n "$EMXOS2" -o -n "$MINGWIN32"; then
   DEFAULT_BITCHX_KICK_FILE="BitchX.kck"
   DEFAULT_BITCHX_QUIT_FILE="BitchX.qt"
   DEFAULT_BITCHX_IRCNAME_FILE="BitchX.nam"
-  WINNT_INSTALL="\$(INSTALL_DATA) \$(top_srcdir)/doc/BitchX.ico \$(IRCLIB); \$(INSTALL_DATA) \$(top_srcdir)/doc/BitchX.bat \$(IRCLIB); \$(INSTALL_DATA) \$(top_srcdir)/doc/bx-rc \$(IRCLIB); \$(MV) \$(IRCLIB)/\$(VERSION)\$(EXEEXT) \$(IRCLIB)/\$(_VERSION_)\$(EXEEXT); \$(RM) \$(IRCLIB)/\$(_VERSION_).old"
+  WINNT_INSTALL="\$(INSTALL_DATA) \$(top_srcdir)/doc/BitchX.ico \$(DESTDIR)\$(IRCLIB); \$(INSTALL_DATA) \$(top_srcdir)/doc/BitchX.bat \$(DESTDIR)\$(IRCLIB); \$(INSTALL_DATA) \$(top_srcdir)/doc/bx-rc \$(DESTDIR)\$(IRCLIB); \$(MV) \$(DESTDIR)\$(IRCLIB)/\$(VERSION)\$(EXEEXT) \$(DESTDIR)\$(IRCLIB)/\$(_VERSION_)\$(EXEEXT); \$(RM) \$(DESTDIR)\$(IRCLIB)/\$(_VERSION_).old"
   HINT_FILE="BitchX.hnt"
   mandir="\$(IRCLIB)"
 else
@@ -933,7 +933,7 @@ else
   INSTALL_WSERV="\$(IRCLIB)/wserv\$(EXEEXT)"
   INSTALL_SCRBX="\${bindir}/scr-bx\$(EXEEXT)"
   INSTALL_SCRIPT="\$(IRCLIB)/script"
-  INSTALL_HELP_CMD="cp -pfr bitchx-docs/* \$(HELPDIR)"
+  INSTALL_HELP_CMD="cp -pfr bitchx-docs/* \$(DESTDIR)\$(HELPDIR)"
   PLUGINDIR="\$(IRCLIB)/plugins"
   DEFAULT_CTOOLZ_DIR="~/.BitchX"
   DEFAULT_MSGLOGFILE="BitchX.away"
@@ -1032,7 +1032,7 @@ AC_CONFIG_COMMANDS([default],[[ echo timestamp > stamp-h
 AC_OUTPUT
 
 echo
-echo BitchX \(c\) 1996-2002 Colten Edwards
+echo BitchX \(c\) 1996-2012 Colten Edwards et al
 echo ----------------------------------------------------------
 echo
 echo The configuration script has finished. You should look through
